[tool.poetry]
name = "robocorp-automation-certification-level-ii-build-a-robot-robot-framework"
version = "0.1.0"
description = ""
authors = ["Teemu Sipiläinen <tsipilainen@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
robotframework = "^7.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
